--- a/views/compose.ejs
+++ b/views/compose.ejs
@@ -1,4 +1,5 @@
 <%- include('partials/header') -%>
 <h1>Compose</h1>
-<p><%= startingContent %></p>
+<input type="text" name="">
+<button type="submit">Publish</button>
 <%- include('partials/footer') -%>
