--- a/views/compose.ejs
+++ b/views/compose.ejs
@@ -1,5 +1,8 @@
 <%- include('partials/header') -%>
 <h1>Compose</h1>
-<input type="text" name="">
-<button type="submit">Publish</button>
+<form action="/compose" method="post">
+  <input type="text" name="" />
+  <button type="submit">Publish</button>
+</form>
+
 <%- include('partials/footer') -%>
