--- a/views/compose.ejs
+++ b/views/compose.ejs
@@ -1,7 +1,7 @@
 <%- include('partials/header') -%>
 <h1>Compose</h1>
 <form action="/compose" method="post">
-  <input type="text" name="" />
+  <input type="text" name="postTitle" />
   <button type="submit">Publish</button>
 </form>
 
