multi line text

--- a/views/compose.ejs
+++ b/views/compose.ejs
@@ -2,6 +2,7 @@
 <h1>Compose</h1>
 <form action="/compose" method="post">
   <input type="text" name="postTitle" />
+  <textarea name="Text1" cols="40" rows="5"></textarea>
   <button type="submit">Publish</button>
 </form>
 
