--- a/views/compose.ejs
+++ b/views/compose.ejs
@@ -1,7 +1,9 @@
 <%- include('partials/header') -%>
 <h1>Compose</h1>
 <form action="/compose" method="post">
-  <input type="text" name="postTitle" />
+  <label>Title</label>
+  <input type="text" name="postTitle">
+  <label>Post</label>
   <textarea name="postBody" cols="30" rows="5"></textarea>
   <button type="submit">Publish</button>
 </form>
