--- a/views/compose.ejs
+++ b/views/compose.ejs
@@ -1,6 +1,11 @@
 <%- include('partials/header') -%>
 <h1>Compose</h1>
 <form action="/compose" method="post">
+  <div class="form-group">
+
+  </div>
+
+
   <label>Title</label>
   <input type="text" name="postTitle">
   <label>Post</label>
