--- a/views/compose.ejs
+++ b/views/compose.ejs
@@ -2,15 +2,12 @@
 <h1>Compose</h1>
 <form action="/compose" method="post">
   <div class="form-group">
-
+    <label>Title</label>
+    <input type="text" name="postTitle" />
+    <label>Post</label>
+    <textarea name="postBody" cols="30" rows="5"></textarea>
+    <button type="submit">Publish</button>
   </div>
-
-
-  <label>Title</label>
-  <input type="text" name="postTitle">
-  <label>Post</label>
-  <textarea name="postBody" cols="30" rows="5"></textarea>
-  <button type="submit">Publish</button>
 </form>
 
 <%- include('partials/footer') -%>
