--- a/views/compose.ejs
+++ b/views/compose.ejs
@@ -3,10 +3,10 @@
 <form action="/compose" method="post">
   <div class="form-group">
     <label>Title</label>
-    <input type="text" name="postTitle" />
+    <input class="form-control" type="text" name="postTitle" />
     <label>Post</label>
-    <textarea name="postBody" cols="30" rows="5"></textarea>
-    <button type="submit">Publish</button>
+    <textarea class="form-control" name="postBody" cols="30" rows="5"></textarea>
+    <button class="btn btn-primary" type="submit">Publish</button>
   </div>
 </form>
 
