--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,7 +4,9 @@
 
 <% console.log(posts); %>
 
-
+<% for(var i=0; i<posts.length; i++) { %>
+   <% console.log(posts[i].title); %>
+<% }; %>
 
 <%- include('partials/footer') -%>
 
