--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,6 +5,8 @@
 <% console.log(posts); %>
 
  <% posts.forEach(function(post){ %>
+  <h1><%=post.title%></h1>
+  <p><%=post.content%></p>
 <% console.log(post.title); %>
   <% }) %>
    
