--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,4 +1,4 @@
-<%- include('partials/header') -%>
+<%- include('partials/header'); -%>
 <h1>Home</h1>
 <p><%= startingContent %></p>
 
@@ -7,7 +7,7 @@
  <% posts.forEach(function(post){ %>
   <h1><%=post.title%></h1>
   <p><%=post.content.substring(0, 100) + " ..."%>
-  <a href="/posts/<%= post._id %>">Read More</a>
+  <a href="/posts/<%=post._id%>">Read More</a>
   </p>
  
 
@@ -15,5 +15,5 @@
    
 
 
-<%- include('partials/footer') -%>
+<%- include('partials/footer'); -%>
 
